# drime-s3

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  test_s3.sh
drime_s3/: __init__.py  __main__.py  api.py  gateway.py  models.py
