[project]
name = "drime-s3"
version = "1.0.2"
description = "S3-compatible gateway for Drime Cloud"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JD", email = "diego.juan@gmail.com"}
]
keywords = ["s3", "drime", "cloud", "storage", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
    "cheroot>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/diegojuan/drime-s3"

[project.scripts]
drime-s3 = "drime_s3.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
